math-core/src/snapshots/math_core__parser__tests__big_paren.snap
---
source: math-core/src/parser.rs
expression: "\\big("
---
[
  SizedParen(Scale1, StretchableOp('(', Always)),
]
