math-core/src/snapshots/math_core__parser__tests__boldsymbol_greek_var.snap
---
source: math-core/src/parser.rs
expression: "\\boldsymbol{\\Gamma\\varGamma}"
---
[
  IdentifierStr(true, "𝚪𝜞"),
]
