math-core/src/snapshots/math_core__parser__tests__colon_fusion_in_subscript.snap
---
source: math-core/src/parser.rs
expression: "x_:\\equiv, x_:="
---
[
  Subscript(
    target: IdentifierChar('x', Default),
    symbol: Operator(
      op: ':',
      attr: None,
      left: None,
      right: None,
    ),
  ),
  Operator(
    op: '≡',
    attr: None,
    left: None,
    right: Some(Zero),
  ),
  Operator(
    op: ',',
    attr: None,
    left: None,
    right: None,
  ),
  Subscript(
    target: IdentifierChar('x', Default),
    symbol: Operator(
      op: ':',
      attr: None,
      left: None,
      right: None,
    ),
  ),
  Operator(
    op: '=',
    attr: None,
    left: None,
    right: Some(Zero),
  ),
]
