math-core/src/snapshots/math_core__parser__tests__colon_fusion_stop.snap
---
source: math-core/src/parser.rs
expression: ":2=:="
---
[
  Operator(
    op: ':',
    attr: None,
    left: Some(Zero),
    right: Some(FiveMu),
  ),
  Number("2"),
  Operator(
    op: '=',
    attr: None,
    left: None,
    right: Some(Zero),
  ),
  Operator(
    op: ':',
    attr: None,
    left: Some(Zero),
    right: Some(Zero),
  ),
  Operator(
    op: '=',
    attr: None,
    left: Some(Zero),
    right: Some(Zero),
  ),
]
