math-core/src/snapshots/math_core__parser__tests__comment.snap
---
source: math-core/src/parser.rs
expression: "\\text{% comment}\n\\%as}"
---
[
  Text(None, "%as"),
]
