math-core/src/snapshots/math_core__parser__tests__displaystyle_ended_by_end.snap
---
source: math-core/src/parser.rs
expression: "\\begin{matrix}\\sum\\displaystyle\\sum\\end{matrix}"
---
[
  Table(
    align: Centered,
    style: Some(Display),
    content: [
      Operator(
        op: '∑',
        attr: None,
        left: Some(Zero),
        right: None,
      ),
      Row(
        nodes: [
          Operator(
            op: '∑',
            attr: None,
            left: Some(Zero),
            right: Some(Zero),
          ),
        ],
        attr: Some(Style(Display)),
      ),
    ],
  ),
]
