math-core/src/snapshots/math_core__parser__tests__double_prime.snap
---
source: math-core/src/parser.rs
expression: "f''"
---
[
  Superscript(
    target: IdentifierChar('f', Default),
    symbol: Operator(
      op: '″',
      attr: None,
      left: None,
      right: None,
    ),
  ),
]
