math-core/src/snapshots/math_core__parser__tests__frac_with_subscript.snap
---
source: math-core/src/parser.rs
expression: "\\frac12_x"
---
[
  Subscript(
    target: Frac(
      num: Number("1"),
      denom: Number("2"),
      lt_value: NaN,
      lt_unit: Rem,
      attr: None,
    ),
    symbol: IdentifierChar('x', Default),
  ),
]
