math-core/src/snapshots/math_core__parser__tests__genfrac.snap
---
source: math-core/src/parser.rs
expression: "\\genfrac(){1pt}{0}{1}{2}"
---
[
  Fenced(
    style: Some(Display),
    open: Some(StretchableOp('(', Always)),
    close: Some(StretchableOp(')', Always)),
    content: Frac(
      num: Number("1"),
      denom: Number("2"),
      lt_value: 0.1,
      lt_unit: Rem,
      attr: None,
    ),
  ),
]
