math-core/src/snapshots/math_core__parser__tests__int_relation.snap
---
source: math-core/src/parser.rs
expression: "{\\int = 4}"
---
[
  Row(
    nodes: [
      Operator(
        op: '∫',
        attr: None,
        left: Some(Zero),
        right: Some(Zero),
      ),
      Operator(
        op: '=',
        attr: None,
        left: None,
        right: None,
      ),
      Number("4"),
    ],
    attr: None,
  ),
]
